<resources>
    <string name="app_name">Happy Places</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">SAVE</string>
    <string name="imageview">ImageView</string>
    <string name="oops_no_happy_places_found_please_add_one">OOPS ! No Happy Places found, Please add one</string>
    <string name="image_content_description">image</string>

    <string name="google_maps_api_key">AIzaSyBOxEijvkmWhRRy19yCYBrXuepdJAy37GU</string>
    <string name="view_on_map">view on map</string>
</resources>